# ml_concepts

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ideas/contrastive learning/: README.md
ideas/gpt_from_scratch/: DEMO.ipynb  README.md  dataset.py  finetune_for_instructions.ipynb  format_input.py  get_dataset.py  lora.py  model.py  utils.py
ideas/grammar_constrained_decoding/: README.md  guidance_example.ipynb
ideas/graph_neural_networks/: MAIN.ipynb  README.md
ideas/lstm/: LSTM_lightning.ipynb  LSTM_scratch.ipynb  LSTM_torch.ipynb
ideas/metric_learning/: MAIN.ipynb  README.md  plot_sandwich.py
ideas/seq2seq/: model.py  seq2seq_model.py  train.py  utils.py
ideas/ssl/: GenerateEmbeddingsTrain.py  README.md  alignment_vs_uniformity.ipynb  augmentations.py  callbacks.py  demo_augmentations.ipynb  demo_augmentations.py  demo_vidaug.ipynb  example_simclr.ipynb  example_simclr.py  main_simclr.ipynb  mnist_one_more_time.ipynb  models.py  ntxent_loss.ipynb  plot_kmeans_digits.ipynb  plot_kmeans_mnist.ipynb  prepare_data.ipynb  simclr_mnist_fixed_embedding_size.ipynb  simclr_mnist_full_experiment.ipynb  simclr_mnist_manual_execution.ipynb  simclr_mnist_variable_embedding_size.ipynb  simcrl_mnist.ipynb  simlr_mnist_full_experiment.ipynb  test_augmentations.py  tutorial_simclr_clothing.ipynb  utils.py
ideas/transformer/: transformer_from_scratch.py
ideas/transformer_from_scratch/: attention.py  decoder.py  encoder.py  run.py  transformer.py
ideas/vae/: MAIN.ipynb  README.md  model.py
ideas/xai/: README.md  (+1 more)
(+101 files in other folders)
